--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/sainarsimhav
+  github: sainarsimhav
   instagram:
-  linkedin: https://www.linkedin.com/in/sai-narsimha-vedula-b61100146/
+  linkedin: sainarsimhav
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
